[project]
name = "django-ixp-tracker"
version = "0.1"
description = "Library to retrieve and manipulate data about IXPs"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Internet Society"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [

]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/InternetSociety/django-ixp-tracker"
Changelog = "https://github.com/InternetSociety/django-ixp-tracker/releases"
Issues = "https://github.com/InternetSociety/django-ixp-tracker/issues"
CI = "https://github.com/InternetSociety/django-ixp-tracker/actions"


[project.optional-dependencies]
test = ["pytest"]
